--- a/src/App.scss
+++ b/src/App.scss
@@ -1,26 +1,4 @@
-#root{
-  margin: 0;
-  padding: 0 !important;
-  height: 100%;
-  width: 100%;
-}
-.Body {
-  margin: 0;
-  padding: 0 !important;
-  height: 100%;
-  width: 100%;
-
-  .Registration {
-    margin: auto;
-    background: white;
-
-    .Form {
-      margin: auto;
-    }
-  }
-}
-//MainPage
-.MainPage {
+.container-fluid {
   padding: 0 !important;
 }
 
@@ -42,7 +20,9 @@
     text-align: center;
 
     .InLineBlock {
-      display: inline-flex;
+      display: flex;
+      justify-content: space-around;
+      margin-bottom: 10px;
     }
 
     .ColumnBlock {
@@ -52,6 +32,69 @@
       margin: auto;
     }
   }
+}
+
+//Personal Page
+.PersonalPage {
+  justify-content: center;
+  padding: 0 !important;
+
+  .PersonalInfo {
+    margin-left: 30px;
+
+    h2 {
+      color: black;
+    }
+
+    .PersonalText {
+
+    }
+  }
+}
+
+//Card
+.CardWrap {
+  padding: 0px !important;
+  display: flex;
+  justify-content: center;
+}
+
+.Card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+}
+.ant-card-body{
+  flex-grow: 1;
+}
+
+.CardText {
+  display: flex;
+  flex-direction: column;
+}
+
+.DetailsAboutEvent {
 
 }
 
+//Form
+.WrapForm {
+  display: flex;
+  flex-direction: column;
+  padding: 24px !important;
+
+  .Input {
+    width: 60%;
+  }
+
+  .Avatar {
+    display: flex;
+    margin: auto;
+  }
+}
+
+//Ссылки
+.Href {
+  color: #007bff !important;
+}
