--- a/src/components/Components.scss
+++ b/src/components/Components.scss
@@ -74,12 +74,14 @@ h3 {
 }
 
 //Menu Personal Area
-.MenuPA {
-  display: flex;
-  justify-content: space-around;
-  margin-top: 30px
+.container-fluid{
+  .MenuPA {
+    display: flex;
+    justify-content: space-around;
+    margin: 30px 0;
+    background: aquamarine;
+  }
 }
-
 //Scroll
 h2 {
   color: white;
