--- a/src/App.scss
+++ b/src/App.scss
@@ -66,7 +66,7 @@ a{
 
 //Card
 .CardWrap {
-  padding: 0px !important;
+  padding: 0 !important;
   display: flex;
   justify-content: center;
 }
@@ -83,21 +83,6 @@ a{
 .CardText {
   display: flex;
   flex-direction: column;
-}
-
-//Form
-.WrapForm {
-  display: flex;
-  flex-direction: column;
-
-  .Input {
-    width: 60%;
-  }
-
-  .Avatar {
-    display: flex;
-    margin: auto;
-  }
 }
 
 //Ссылки
